<?xml version="1.0" encoding="utf-8"?><!--
  Copyright (c) 2019 . Wilberforce Uwadiegwu. All Rights Reserved.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.explore.ExploreFragment">

    <TextView
        android:id="@+id/explore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:padding="@dimen/margin_large"
        android:text="@string/explore"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textStyle="bold"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/navigationIcon"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/navigationIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/navigation_icon"
        android:padding="@dimen/padding_large"
        app:layout_constraintBottom_toBottomOf="@id/explore"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintLeft_toRightOf="@+id/explore"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/explore"
        app:srcCompat="@drawable/ic_nav" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/randomAlbumsRV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/explore" />

    <TextView
        android:id="@+id/recentlyPlayed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:padding="@dimen/margin_large"
        android:text="@string/recentlyPlayed"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/randomAlbumsRV"
        app:layout_constraintLeft_toLeftOf="parent" />


    <TextView
        android:id="@+id/emptyPlaylist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recentlyPlayed"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="@dimen/padding_xx_large"
       android:text="@string/empty_playlist"/>

</androidx.constraintlayout.widget.ConstraintLayout>