<?xml version="1.0" encoding="utf-8"?><!--
  Copyright (c) 2019 . Wilberforce Uwadiegwu. All Rights Reserved.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.search.SearchFragment">

    <ImageButton
        android:id="@+id/sectionBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/go_back"
        android:padding="@dimen/padding_medium"
        app:layout_constraintEnd_toStartOf="@+id/searchText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back" />


    <EditText
        android:id="@+id/searchText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_marginRight="@dimen/margin_small"
        android:autofillHints="search"
        android:background="@null"
        android:ellipsize="end"
        android:hint="@string/search"
        android:imeOptions="actionSearch"
        android:inputType="text"
        android:maxLines="1"
        app:layout_constraintBottom_toBottomOf="@+id/sectionBackButton"
        app:layout_constraintEnd_toStartOf="@+id/filterButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/sectionBackButton"
        app:layout_constraintTop_toTopOf="@+id/sectionBackButton" />


    <ImageButton
        android:id="@+id/filterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/filter_results"
        android:padding="@dimen/padding_medium"
        app:layout_constraintBottom_toBottomOf="@+id/sectionBackButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/searchText"
        app:layout_constraintTop_toTopOf="@+id/sectionBackButton"
        app:srcCompat="@drawable/ic_filter_list" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/resultsTab"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="?actionBarSize"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sectionBackButton"
        app:tabBackground="@color/colorPrimary"
        app:tabGravity="center"
        app:tabIndicatorHeight="4dp"
        app:tabMode="fixed" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/resultsPager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultsTab" />
</androidx.constraintlayout.widget.ConstraintLayout>